--- a/White_echo_motel.css
+++ b/White_echo_motel.css
@@ -38,7 +38,7 @@ margin: auto;
 }
 
 header{
-    background-color: #96d3e2;
+    background-color: #52d1dc;
     height:100px;
     color:darkblue;
     font-size:130%;
@@ -66,7 +66,7 @@ width: 10%;
 }
 
 footer{
-    background-color: #96d3e2;
+    background-color: #52d1dc;
     height:100px;
     color:darkblue;
     font-size:100%;
@@ -91,13 +91,12 @@ footer{
 
 .textOverlay {
     /* style of overlay on room cards, only displayed on hover */
-    background-color: #76CEDC;
+    background-color: #52d1dc;
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    line-height: 20vw;
     text-align: center;
     opacity: 0.0;
     transition: 0.2s;
